This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: test_decimal fails with libmpdecimal 2.4.2
Type: behavior Stage: resolved
Components: Extension Modules Versions: Python 3.6, Python 3.5
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: skrah Nosy List: doko, python-dev, skrah
Priority: normal Keywords:

Created on 2016-03-23 12:42 by doko, last changed 2022-04-11 14:58 by admin. This issue is now closed.

Messages (7)
msg262260 - (view) Author: Matthias Klose (doko) * (Python committer) Date: 2016-03-23 12:42
test_decimal fails with libmpdecimal 2.4.2

that's because Lib/_pydecimal.py hardcodes

__libmpdec_version__ = "2.4.1" # compatible libmpdec version
msg262298 - (view) Author: Roundup Robot (python-dev) (Python triager) Date: 2016-03-23 19:50
New changeset 24c8bb9421f4 by Stefan Krah in branch 'default':
Issue #26621: Update libmpdec version and remove unnecessary test case.
https://hg.python.org/cpython/rev/24c8bb9421f4
msg262299 - (view) Author: Stefan Krah (skrah) * (Python committer) Date: 2016-03-23 19:57
Thanks, the test was not needed: It was more of a reminder to sync the version numbers.
msg262300 - (view) Author: Matthias Klose (doko) * (Python committer) Date: 2016-03-23 20:03
please apply this to the 3.5 branch as well
msg262301 - (view) Author: Stefan Krah (skrah) * (Python committer) Date: 2016-03-23 20:08
I did: Somehow roundup failed to catch it.
msg262302 - (view) Author: Roundup Robot (python-dev) (Python triager) Date: 2016-03-23 20:16
New changeset 3ec98f352053 by Stefan Krah in branch '3.5':
Issue #26621: Remove unnecessary test.
https://hg.python.org/cpython/rev/3ec98f352053
msg262304 - (view) Author: Stefan Krah (skrah) * (Python committer) Date: 2016-03-23 20:19
The roundup timeline is a lie. :)  I pushed the 3.5 patch shortly after the 3.6 one and well before msg262302.
History
Date User Action Args
2022-04-11 14:58:28adminsetgithub: 70808
2016-03-23 20:21:33skrahsetstatus: open -> closed
2016-03-23 20:19:53skrahsetmessages: + msg262304
2016-03-23 20:16:18python-devsetmessages: + msg262302
2016-03-23 20:08:55skrahsetmessages: + msg262301
2016-03-23 20:03:48dokosetstatus: closed -> open

messages: + msg262300
2016-03-23 19:58:46skrahsetstatus: open -> closed
assignee: skrah
type: behavior
resolution: fixed
stage: resolved
2016-03-23 19:57:46skrahsetmessages: + msg262299
2016-03-23 19:50:34python-devsetnosy: + python-dev
messages: + msg262298
2016-03-23 12:42:43dokocreate