Issue #26621: Update libmpdec version and remove unnecessary test case.